typescript/checker/tests/conformance/parser/ecmascript5/Generics/parserConstructorAmbiguity2.ts.stderr
error: UndefinedSymbol {
    span: Span {
        lo: BytePos(
            20,
        ),
        hi: BytePos(
            21,
        ),
        ctxt: #0,
    },
}
 --> $DIR/tests/conformance/parser/ecmascript5/Generics/parserConstructorAmbiguity2.ts:1:10
  |
1 | new Date<A
  |          ^

